Fixed footer + laptop card text align

--- a/custom.css
+++ b/custom.css
@@ -115,23 +115,30 @@ footer div div {
     margin-bottom: 10px;
 }
 
+.footer-links {
+    margin-top: 10px;
+    margin-right: 15px;
+    list-style-type: none;
+}
+
+.footer-links li {
+    margin-bottom: 20px;
+}
+
 #laptops {
     display: flex;
     flex-wrap: wrap;
 }
 
 .card {
-    margin-bottom: 5px;
-    margin-top: 15px;
+    margin: 10px;
 }
 .card-img-top {
     width: 100%;
     height: 100%;
 }
-.card-body {
-    display: flex;
-    flex-direction: column; /* TODO: centered column*/
-    justify-content: center;
+.card-body h5, p {
+    text-align: center;
 }
 
 #title {
